# SampPluginTemplate

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
includes/: headers.hpp
libraries/pawn/amx/: amx.h.gch  getch.h.gch
source/: main.cpp  main.def  main.h  plugin.cpp  plugin.h  script.cpp  script.h
